Make ledtrig-block loadable.
Fix issues with loading/unloading the block led trigger.

Signed-off-by: Michal Suchanek <hramrach@gmail.com>

--- a/drivers/leds/Kconfig
+++ b/drivers/leds/Kconfig
@@ -495,7 +495,7 @@ config LEDS_TRIGGER_SLEEP
 	  This turns LEDs on when the screen is off but the cpu still running.
 
 config LEDS_TRIGGER_BLOCK
-	bool "LED Block Device Trigger"
+	tristate "LED Block Device Trigger"
 	depends on LEDS_TRIGGERS && BLOCK
 	help
 	  This turns LEDs on when sectors are read from or written to a block device.
