--- a/arch/arm/boot/dts/exynos5250-snow.dts
+++ b/arch/arm/boot/dts/exynos5250-snow.dts
@@ -689,6 +689,21 @@
 	samsung,spi-src-clk = <0>;
 	num-cs = <1>;
 	cs-gpios = <&gpa2 5 GPIO_ACTIVE_HIGH>;
+
+	flash: m25p80@0 {
+		#address-cells = <1>;
+		#size-cells = <1>;
+		compatible = "jedec,spi-nor";
+		reg = <0>;
+		/* TODO: this chip is rated 133MHz but
+		   there are pl330 DMA issues at this speed. */
+		spi-max-frequency = <40000000>;
+		linux,max-tx-len = <65536>;
+		m25p,fast-read;
+		controller-data {
+			samsung,spi-feedback-delay = <0>;
+		};
+	};
 };
 
 &usbdrd_dwc3 {
