--- a/arch/arm/boot/dts/axp152.dtsi
+++ b/arch/arm/boot/dts/axp152.dtsi
@@ -42,8 +42,52 @@
  *     OTHER DEALINGS IN THE SOFTWARE.
  */
 
+/*
+ * AXP152 Integrated Power Management Chip
+ * http://www.x-powers.com/product/AXP152.php
+ * http://dl.linux-sunxi.org/AXP/AXP152%20Datasheet%20v1.0_cn.pdf
+ */
+
 &axp152 {
 	compatible = "x-powers,axp152";
 	interrupt-controller;
 	#interrupt-cells = <1>;
+
+	regulators {
+		/* Default work frequency for buck regulators */
+		/* FIXME update regulators for AXP152 defaults */
+		x-powers,dcdc-freq = <1500>;
+
+		reg_dcdc2: dcdc2 {
+			regulator-name = "dcdc2";
+		};
+
+		reg_dcdc3: dcdc3 {
+			regulator-name = "dcdc3";
+		};
+
+		reg_ldo1: ldo1 {
+			/* LDO1 is a fixed output regulator */
+			regulator-always-on;
+			regulator-min-microvolt = <1300000>;
+			regulator-max-microvolt = <1300000>;
+			regulator-name = "ldo1";
+		};
+
+		reg_ldo2: ldo2 {
+			regulator-name = "ldo2";
+		};
+
+		reg_ldo3: ldo3 {
+			regulator-name = "ldo3";
+		};
+
+		reg_ldo4: ldo4 {
+			regulator-name = "ldo4";
+		};
+
+		reg_ldo5: ldo5 {
+			regulator-name = "ldo5";
+		};
+	};
 };
