--- a/arch/arm/boot/dts/axp209.dtsi
+++ b/arch/arm/boot/dts/axp209.dtsi
@@ -91,7 +91,7 @@
 	};
 
 	usb_power_supply: usb_power_supply {
-		compatible = "x-powers,axp202-usb-power-supply";
+		compatible = "x-powers,usb-power-supply";
 		status = "disabled";
 	};
 };
